libcleri (0.9.2)

  * Added __cplusplus macros for c++ compatibility.

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  25 Aug 2017

libcleri (0.9.1)

  * Rename object.h to cleri.h and the cleri_object_t to cleri_t.

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  23 Jun 2017

libcleri (0.9.0)

  * Initial version for the C program language.
    * fixed largets token first.
    * added cleri_dup().
    * added header guards.
    * added forward reference element. (issue #2)

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  22 Jun 2017